🔧 fix: alignement et styles des liens de connexion + connexion

--- a/src/components/register/Register.css
+++ b/src/components/register/Register.css
@@ -5,8 +5,8 @@ body {
 
 .register-container {
     display: flex;
-    height: 100vh;
-    width: 100vw;
+    max-height: 100vh;
+    max-width: 100vw;
 }
 
 .image-container {
@@ -33,14 +33,13 @@ body {
     background-color: #fff;
 }
 
-.logo {
-    width: 400px;
-    margin-bottom: 20px;
+.logo-register {
+    width: 30%;
+    margin-bottom: 0;
 }
 
 h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
+    font-size: 1em;
 }
 
 form {
@@ -52,7 +51,7 @@ form {
 }
 
 .form-group {
-    margin-bottom: 15px;
+    margin-bottom: 5px;
     width: 100%;
     box-sizing: border-box;
 }
@@ -74,7 +73,7 @@ form {
 .input-icon input {
     width: calc(100% - 5px);
     padding: 10px 10px 10px 40px;
-    font-size: 14px;
+    font-size: 0.6em;
     border: none;
     border-bottom: 1px solid #111;
     outline: none;
@@ -89,7 +88,7 @@ form {
     list-style-type: none;
     padding: 0;
     margin-top: 10px;
-    font-size: 14px;
+    font-size: 0.6em;
     width: 100%;
 }
 
@@ -127,8 +126,8 @@ form {
 .register-button {
     margin-top: 25px;
     width: 100%;
-    padding: 15px;
-    font-size: 16px;
+    padding: 1em;
+    font-size: 0.7em;
     background-color: black;
     color: white;
     border: none;
@@ -142,23 +141,30 @@ form {
     background: #333333;
 }
 
-.login-button-RegisterPage {
-    margin-top: 10px;
-    padding: 10px;
-    font-size: 12px;
-    background-color: white;
-    color: black;
-    border-radius: 10px;
-    cursor: pointer;
-    box-sizing: border-box;
-    border: 2px solid black;
+.register-link a {
+    color: #FF7B00;
+    text-decoration: none;
 }
 
-.login-button-RegisterPage:hover {
-    background: #eceaea;
-    color: black;
-    border: 2px solid black;
-    border-radius: 10px;
+.register-links {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 0.6em;
+    line-height: 1.8;
+}
+
+.register-links span {
+    color: #6b6b6b;
+    display: inline;
+}
+
+.register-links a {
+    color: #FF7B00;
+    text-decoration: none;
+}
+
+.register-links a:hover {
+    text-decoration: underline;
 }
 
 @media (max-width: 1100px) {
@@ -202,11 +208,15 @@ form {
     }
 
     h1 {
-        font-size: 20px;
+        font-size: 1.3em;
     }
 
     .register-button {
-        font-size: 14px;
+        font-size: 0.6em;
         padding: 10px;
+    }
+    .input-icon img {
+        width: 15px;
+        height: 15px;
     }
 }
